--- a/Level-two/index.html
+++ b/Level-two/index.html
@@ -7,6 +7,11 @@
     <title>Register</title>
 </head>
 <body>
+    <div class = "container">
+        <div class = "left-overlay">
+            <h1>Let's work together</h1>
+        </div>
+    </div>
     
 </body>
 </html>
