add company input

--- a/Level-two/index.html
+++ b/Level-two/index.html
@@ -33,6 +33,11 @@
                         <small>Error Message</small>
                     </div>
                     <div class = "form-input">
+                        <label for = "company">Company</label>
+                        <input type = "text" id = "company" name = "company" required />
+                        <small>Error Message</small>
+                    </div>
+                    <div class = "form-input">
                         <div class = "form-label">
                             <label for = "phone">Phone</label>
                             <span>Optional</span>
@@ -74,7 +79,7 @@
         </div>
 
         <div class = "right-overlay">
-            
+
         </div>
     </div>
     
