create thank you page

--- a/Level-two/index.html
+++ b/Level-two/index.html
@@ -41,17 +41,17 @@
                         <div class = "form-label">
                             <label for = "phone">Phone</label>
                             <span>Optional</span>
-                            <input type = "tel" class = "input" id = "phone" name = "phone" />
                         </div>
+                        <input type = "tel" class = "input" id = "phone" name = "phone" />
                     </div>
                     <div class = "form-input">
                         <div class="form-label">
                             <label>How can we help you?</label>
-                            <p>Min 100 characters</p>
-                            <textarea required></textarea>
+                            <span>Min 100 characters</span>
                         </div>
+                        <textarea rows="7" required></textarea>
                     </div>
-                    <div class = "form-input radio-input">
+                    <div class = "radio-input">
                         <p>Expected Budget</p>
                         <input type = "radio" id = "lowest" name = "budget" value = "Less than 25k">
                         <label for = "lowest">Less than $25K</label>
