--- a/Level-two/index.html
+++ b/Level-two/index.html
@@ -14,7 +14,7 @@
                 <p>We'd love to hear from you. Send us a message using the form below, or email us!</p>
             </div>
             <div class = "left-bottom">
-                <form id = "form" class = "form">
+                <form id = "form" class = "form" action = "appreciation.html">
                     <div class = "text-input">
                         <div class = "form-input">
                             <label for = "first-name">First Name</label>
@@ -49,7 +49,8 @@
                             <label>How can we help you?</label>
                             <span>Min 100 characters</span>
                         </div>
-                        <textarea rows="7" required></textarea>
+                        <textarea rows="7" required minlength="100"></textarea>
+                        <small>Error Message</small>
                     </div>
                     <div class = "radio-input">
                         <p>Expected Budget</p>
@@ -64,7 +65,7 @@
                         <br />
                         <input type = "radio" id = "highest" name = "budget" value = "150k">
                         <label for = "highest">$150k</label>
-                        <small>Error Message</small>
+                        <small class = "small">Error Message</small>
                     </div>
                     <div class = "form-input">
                         <label for = "info">How did you hear about us</label>
@@ -72,7 +73,7 @@
                         <small>Error Message</small>
                     </div>
 
-                    <button class = "submit">Submit</button>
+                    <button type = "submit" class = "submit">Submit</button>
                 </form>
             </div>
 
@@ -83,5 +84,7 @@
         </div>
     </div>
     
+
+    <script src = "index.js"></script>
 </body>
 </html>
