update appreciation text

--- a/Level-two/appreciation.html
+++ b/Level-two/appreciation.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "styles.css" />
     <title>Thank You</title>
 </head>
 <body>
+
+    <div class = "container2">
+        <div class = "appreciation">
+            <p class = "heart">💜</p>
+            <p class = "thanks">Thank you for reaching out to us!</p>
+        </div>
+    </div>
     
 </body>
 </html>
