update font-size for form labels on smaller screens

--- a/Level-two/index.html
+++ b/Level-two/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class = "radio-input">
                         <p>Expected Budget</p>
-                        <input type = "radio" id = "lowest" name = "budget" value = "Less than 25k">
+                        <input type = "radio" id = "lowest" name = "budget" value = "Less than 25k" required>
                         <label for = "lowest">Less than $25K</label>
                         <br />
                         <input type = "radio" id = "low" name = "budget" value = "25k - 50k">
