--- a/Level-four/index.html
+++ b/Level-four/index.html
@@ -35,10 +35,11 @@
                 <button class = "num" value = "0">0</button>
                 <button class = "decimal" value = ".">.</button>
                 <button class = "all-clear" value = "all-clear">AC</button>
-                <button class = "equal-sign" value = "+">.</button>
+                <button class = "equal-sign operator" value = "=">=</button>
             </div>
         </div>
     </div>
     
+    <script src = "index.js"></script>
 </body>
 </html>
