structure calculator keys

--- a/Level-four/index.html
+++ b/Level-four/index.html
@@ -16,7 +16,7 @@
             <div class = "calculator-keys">
                 <button class = "operator" value = "+">+</button>
                 <button class = "operator" value = "-">-</button>
-                <button class = "operator" value = "x">x</button>
+                <button class = "operator" value = "*">x</button>
                 <button class = "operator" value = "/">&divide;</button>
 
                 <button class = "num" value = "7">7</button>
