--- a/Level-six/index.html
+++ b/Level-six/index.html
@@ -51,15 +51,46 @@
         </div>
     </div>
 
+
+    <div class = "inactive">
+        <div class = "nav-top">
+            <img src = "images/logo-bookmark.svg" alt = "Logo" />
+            <img class = "close" src = "images/icon-close.svg" alt = "Close" />
+        </div>
+        <div class = "nav-center">
+            <div class = "nav-link">
+                <a href = "#">features</a>
+            </div>
+            <div class = "nav-link">
+                <a href = "#">pricing</a>
+            </div>
+            <div class = "nav-link">
+                <a href = "#">contact</a>
+            </div>
+            <div class = "nav-link login-active">
+                <a href = "#">login</a>
+            </div>
+        </div>
+        <div class = "socials">
+            <a href = "facebook.com">
+                <img src = "images/icon-facebook.svg" alt = "facebook" />
+            </a> 
+            <a href = "twitter.com">
+                <img src = "images/icon-twitter.svg" alt = "twitter" />
+            </a>
+        </div>
+    </div>
     <footer>
         <div class = "top-footer">
             <p>35,000+ already joined</p>
             <h3>Stay up-to-date with what we’re doing</h3>
             <div class = "footer-form">
-                <input type = "email" id = "footer-email" placeholder="Enter your email address" />
-                <button type = "submit" class = "login">SUBMIT</button>
+                <label>
+                    <input type = "email" id = "footer-email" placeholder="Enter your email address" />
+                    <span class = "error-block"></span>
+                </label>
+                <button type = "submit" class = "login footer-btn">Contact Us</button>
             </div>
-            <span class = "error-block2"></span>
         </div>
         <div class = "bottom-footer">
             <div class = "main-nav">
