--- a/Level-six/index.html
+++ b/Level-six/index.html
@@ -51,7 +51,9 @@
         </div>
     </div>
 
+    <!-- Insert your part here-->
 
+    <!-- Your part ends here-->
     <div class = "inactive">
         <div class = "nav-top">
             <img src = "images/logo-bookmark.svg" alt = "Logo" />
